@@ -57,7 +57,28 @@ this repository contains the full copyright notices and license terms. -->
         <record model="ir.ui.view" id="inventory_line_view_tree">
             <field name="model">stock.inventory.line</field>
             <field name="type">tree</field>
+            <field name="priority" eval="10"/>
             <field name="name">inventory_line_tree</field>
+        </record>
+        <record model="ir.ui.view" id="inventory_line_view_list_simple">
+            <field name="model">stock.inventory.line</field>
+            <field name="type">tree</field>
+            <field name="priority" eval="20"/>
+            <field name="name">inventory_line_list_simple</field>
+        </record>
+
+        <record model="ir.action.act_window" id="act_inventory_line_relate">
+            <field name="name">Inventory Lines</field>
+            <field name="res_model">stock.inventory.line</field>
+            <field
+                name="domain"
+                eval="[If(Eval('active_ids', []) == [Eval('active_id')], ('inventory', '=', Eval('active_id')), ('inventory', 'in', Eval('active_ids')))]"
+                pyson="1"/>
+        </record>
+        <record model="ir.action.keyword" id="act_inventory_line_relate_keyword1">
+            <field name="keyword">form_relate</field>
+            <field name="model">stock.inventory,-1</field>
+            <field name="action" ref="act_inventory_line_relate"/>
         </record>
 
         <record model="ir.model.access" id="access_inventory">
