@@ -1,3 +1,4 @@
+* Add relate to open inventory lines
 * Use simplified view for moves list on shipments
 * Add a relate from product to its moves
 * Factorize the cost price of move for cost computation
